--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div>
-        This site is open source. <a href="https://github.com/darkinapla/chernobyl.tk-chrnbl.tk/">Improve this page</a>.
+        This site is open source.
       </div>
