--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
-<div>
-        This site is open source.
-      </div>
+<!doctype html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style type="text/css">
+    	.font {
+                font-family: Source Code Pro;
+                color: #ffffffe0;
+            }
+      b1 {
+    /* font-family: "Kameron",Georgia,serif;*/
+    position: absolute;
+    font-weight: 900;
+    font-size: 40px;
+    margin-top: 3%;
+    left: 50px;
+    	}
+      b2 {
+    /* font-family: "Kameron",Georgia,serif;*/
+    position: absolute;
+    font-weight: 900;
+    font-size: 5px;
+    margin-top: 6.7%;
+    left: 27%;
+    	}
+    </style>
+</head>
+<body bgcolor="#131110">
+  <div class="font">
+      <b1>this is site</b1>
+        <b2>by chernobyl.tk :)</b2></div>
+</body>
